cabal-version:      2.4
name:               kp-project
version:            0.1.0.0
author:             tsukaryu
maintainer:         drgon8otsuka@gmail.com

common common-definitions
    ghc-options: -Wall
    default-language: GHC2021
    build-depends:
        , base ^>=4.16.4.0
        , directory
        , haskell-say ^>=1.0.0.0

executable app-exe 
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   app

executable a-exe
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   a