cabal-version:      3.0
name:               kp-project
version:            0.1.0.0
author:             tsukaryu
maintainer:         drgon8otsuka@gmail.com
license:            MIT
license-file:       LICENSE

common common-definitions
    ghc-options: -Wall
    default-language: GHC2021
    build-depends:
        , array                          ==0.5.4.0
        , base
        , bytestring                     ^>=0.11.4.0
        , directory                      >=1.3.7.1     && <1.3.8.0
        , extra                          ^>=1.7.13
        , filepath                       >=1.4.2.2     && <1.4.99
        , haskell-say                    ^>=1.0.0.0
        , vector                         ^>=0.13.0.0
        , vector-algorithms              ^>=0.9.0.1

executable setup
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   setup

executable app-exe 
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   app

executable a-exe
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   a

executable toyboot-foldl
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   toyboot/foldl

executable toyboot-map-accuml
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   toyboot/map-accuml

executable toyboot-ix
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   toyboot/ix

executable toyboot-iarray
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   toyboot/iarray

executable toyboot-accum-array
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   toyboot/accum-array

executable toyboot-m-array
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   toyboot/m-array

executable toyboot-vector
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   toyboot/vector

executable toyboot-io
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   toyboot/io

executable abc152-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc152/b

executable abc082-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc082/b

executable past-1-a
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   past/1/a

executable abc087-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc087/b

executable abc075-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc075/b

executable abc075-b-2
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc075/b-2