cabal-version:      3.0
name:               kp-project
version:            0.1.0.0
author:             tsukaryu
maintainer:         drgon8otsuka@gmail.com
license:            MIT
license-file:       LICENSE

common common-definitions
    ghc-options: -Wall
    default-language: GHC2021
    build-depends:
        , array                          ==0.5.4.0
        , base
        , bytestring                     ^>=0.11.4.0
        , containers                     ^>=0.6.7
        , directory                      >=1.3.7.1     && <1.3.8.0
        , extra                          ^>=1.7.13
        , filepath                       >=1.4.2.2     && <1.4.99
        , haskell-say                    ^>=1.0.0.0
        , vector                         ^>=0.13.0.0
        , vector-algorithms              ^>=0.9.0.1

executable setup
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   setup

executable app-exe 
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   app

executable a-exe
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   a

executable abc152-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc152/b

executable abc082-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc082/b

executable past-1-a
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   past/1/a

executable abc087-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc087/b

executable abc075-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc075/b

executable abc075-b-2
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc075/b-2

executable abc144-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc144/b

executable abc105-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc105/b

executable abc133-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc133/b

executable abc133-b-2
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc133/b-2

executable abc175-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc175/b

executable abc214-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc214/b

executable abc177-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc177/b

executable abc157-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc157/b

executable abc049-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc049/b

executable abc197-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc197/b

executable abc107-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc107/b

executable past-4-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   past/4/c

executable abc085-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc085/c

executable abc097-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc097/b

executable abc098-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc098/b

executable abc051-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc051/b

executable tenkei-055
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   tenkei/055

executable tenkei-055-2
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   tenkei/055/2

executable abc157-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc157/c

executable abc195-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc195/b

executable abc079-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc079/c

executable abc088-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc088/c

executable abc095-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc095/c

executable abc108-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc108/c

executable abc085-b-1
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc085/b/1

executable abc137-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc137/c

executable abc164-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc164/c

executable abc154-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc154/c

executable abc118-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc118/b

executable abc081-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc081/c

executable tenkei-027
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   tenkei/027

executable abc155-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc155/c

executable abc073-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc073/c

executable abc082-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc082/c

executable abc058-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc058/c

executable abc206-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc206/c

executable tenkei-046
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   tenkei/046

executable past-1-f
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   past/1/f

executable abc143-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc143/c

executable abc019-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc019/b

executable abc139-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc139/c

executable agc026-a
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   agc026/a

executable abc116-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc116/c

executable agc040-a
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   agc040/a

executable agc013-a
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   agc013/a

executable agc039-a
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   agc039/a

executable abc136-d
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc136/d

executable agc016-a
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   agc016/a

executable tenkei-084
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   tenkei/084

executable past-3-e
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   past/3/e

executable abc061-b
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc061/b

executable abc163-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc163/c

executable abc166-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc166/c

executable abc068-c
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   abc068/c

executable tenkei-078
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   tenkei/078

executable past-1-e
    import:           common-definitions
    main-is:          Main.hs
    hs-source-dirs:   past/1/e